syntax = "proto3";
import "google/protobuf/empty.proto";
package currency;
// Определение gRPC-сервиса
service CurrencyApi {
  // Получает текущий курс указанной валюты
  rpc GetCurrencyRate (CurrencyRateRequest) returns (CurrencyRateResponse);
  // Получает курс валюты на указанную дату
  rpc GetCurrencyDataWithRate (CurrencyRateOnDateRequest) returns (CurrencyRateOnDateResponse);
  // Получает настройки API
  rpc GetApiSettings (google.protobuf.Empty) returns (ApiSettingsResponse);
}

// Тип валюты
enum CurrencyCode
{
  CURRENCY_CODE_NOT_SET = 0; // Значение по умолчанию
  CURRENCY_CODE_USD = 1; // United States Dollar
  CURRENCY_CODE_RUB = 2; // Russian Ruble
  CURRENCY_CODE_KZT = 3; // Kazakhstani Tenge
}

// Кастомный decimal
message DecimalValue {

  // Целые единицы
  int64 units = 1;

  // Значение после запятой
  sfixed32 nanos = 2;
}

// Запрос на получение курса валюты
message CurrencyRateRequest {
  CurrencyCode baseCurrencyCode = 1; // Код базовой валюты, относительно которой необходимо вычислить курс, например, "USD"
  CurrencyCode currencyCode = 2; // Код валюты, например, "RUB"
}

// Ответ с курсом валюты
message CurrencyRateResponse {
  CurrencyCode currencyCode = 1;  // Код валюты, например, "RUB"
  DecimalValue value = 2;         // Значение курса
}
// Тип для передачи даты
message GRPCDateOnly {
  // Год
  int32 year = 1;
  // Месяц
  int32 month = 2;
  // День
  int32 day = 3;
}
// Запрос на получение курса валюты на дату
message CurrencyRateOnDateRequest {
  CurrencyCode baseCurrencyCode = 1; // Код базовой валюты, относительно которой необходимо вычислить курс, например, "USD"
  CurrencyCode currencyCode = 2; // Код валюты, например, "RUB"
  GRPCDateOnly date = 3;   // Дата в формате "yyyy-MM-dd"
}

// Ответ с курсом валюты на дату
message CurrencyRateOnDateResponse {
  GRPCDateOnly date = 1;    // Дата в формате "yyyy-MM-dd"
  CurrencyCode currencyCode = 2;  // Код валюты, например, "RUB"
  DecimalValue value = 3;         // Значение курса
}

// Ответ с настройками API
message ApiSettingsResponse {
  bool hasRequestsLeft = 5;     // Доступны ли еще запросы (requestLimit > requestCount)
}